tests/neg/i8623.check
-- [E142] Type Error: tests/neg/i8623.scala:11:2 -----------------------------------------------------------------------
11 |  unseal.pos  // error
   |  ^^^^^^
   |  Failure to generate given instance for type ?{ pos: ? } from argument of type ?1.tasty.Tree)
   |
   |  I found: <skolem>.tasty.pos(unseal(given_QC[Any]))
   |  But the part corresponding to `<skolem>` is not a reference that can be generated.
   |  This might be because resolution yielded as given instance a function that is not
   |  known to be total and side-effect free.
   |
   | longer explanation available when compiling with `-explain`
